fix: chat screen header
Fixed an issue where the header on the chat screen was truncated

--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -22,7 +22,7 @@
   display: flex;
   justify-content: center;
   position: fixed;
-  top: 15px;
+  top: 18px;
   width: 100vw;
   box-sizing: border-box;
 }
